2016-02-01 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: upon process shutdown thread status 
    has to be set to 'init' to force thread exit

2016-01-25 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivetInspect.c: adding handling of the MpmBridge directive
    to the ::rivet::inspect command
    * doc/xml/lazybridge.xml: more development to lazy bridge manual page
    * rivet/packages/calendar/: preparing new version of package calendar

2016-01-19 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: removed unused field structures, boolean
    for process shutdown moved to process wide module status
    * doc/lazybridge.xml: started documentation of the lazy bridge

2016-01-17 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: removed variable needed only when built with
    the old thread communication model

2016-01-14 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: new communication method between bridge
    controlled Tcl threads and handler threads. This method was inspired by
    the experiment done with the lazy bridge and proved to have simpler code
    and avoids the need to rely on the handler thread memory pool that gets
    destroyed too often
    * src/mod_rivet/mod_rivet.h: removed definition specific to the worker bridge

2016-01-07 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/: fixed aimed at consistently determining the virtual host
    associated to a thread

2016-01-05 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_generator.[h|c]: files holding the output generation
    procedures on which all the bridges rely (previously stored in mod_rivet.c)
    * src/mod_rivet/rivet_lazy_mpm.c: purged of redundant locking code and unused variables
    * src/mod_rivet/worker_prefork_mpm.c: new file with thread private data extension to
    bridge status 